--- a/ADO.NET/ADO.NET/App.config
+++ b/ADO.NET/ADO.NET/App.config
@@ -4,16 +4,18 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 		<connectionStrings>
-				<add name="Movies_PV_319"
-						 connectionString="
-									Data Source=(localdb)\ProjectModels;
-									Initial Catalog=Movies_PV_319;
-									Integrated Security=True;
-									Connect Timeout=30;
-									Encrypt=False;
-									TrustServerCertificate=False;
-									ApplicationIntent=ReadWrite;
-									MultiSubnetFailover=False"
+				<add name="Movies"
+						 connectionString=
+					"
+					Data Source=(localdb)\MSSQLLocalDB;
+					Initial Catalog=Movies;
+					Integrated Security=True;
+					Connect Timeout=3;
+					Encrypt=False;
+					TrustServerCertificate=False;
+					ApplicationIntent=ReadWrite;
+					MultiSubnetFailover=False
+					"
 					/>
-		</connectionStrings>
+				</connectionStrings>
 </configuration>
